# PythonTesting

./: README.md  conftest.py  playwright-tests.yml  pyproject.toml  pytest.ini  report.html  requirements.txt
.github/workflows/: README.md  playwright-tests.yml
fakestoreplaywright.egg-info/: PKG-INFO  SOURCES.txt
playwright/: pyvenv.cfg
playwright/Scripts/: activate  activate.bat
tests/: example.py  test_launch_fakestore.py
